[package]
name = "gamevecs"
version = "1.0.0"
edition = "2021"

description = "A library that provides 2d and 3d vectors specifically for game developement"
readme = "README.md"
repository = "https://github.com/nobschulth/gamevecs"
license = "MIT"
keywords = ["gamedev", "vectors"]
categories = ["game-development", "mathematics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
